  it would be max 65 seconds (max 5s inaccuracy, lower with lower times).
- Smallll fix for time shift protection
** 3.2.8-rc2 release **
- Some text fixes regarding time shift feature
- Fix for compile problem on FreeBSD (and possibly other OS's):
  - When pkg-config is present but does not recognize --static, use
    default c-ares library options.
  - Set default c-ares library options to -lcares on FreeBSD and others.
    Set to -lcares -lrt on Linux (previously was -lcares -lrt for all).
  Thanks to goldenwolf for the bugreport (#0003803) and providing a test-
  shell to trace this issue down.
** 3.2.8-rc2 *NIX downloads replaced **
- 'link xx with SSL option enabled on non-SSL compile' was incorrectly
  printed out as a warning, when in fact it's an error (and was treated as
  such). Same for ZIP on non-zip compile. Reported by Stealth (#0003833).
- Fixed harmless (but silly) message which happened on every IRCd boot
  (time jump message).
- Updated credits (donations)
** 3.2.8 release **
- Fixed (serious) security issue regarding allow::options::noident,
  reported by meepmeep (#0003852).
** 3.2.8.1 release **
- Fixed compile issue on Solaris regarding c-ares (-lrt), reported and
  test shell provided by fraggeln (#0003854).
- Improved automatic SSL detection on Solaris (/usr/sfw), reported by
  fraggeln (also #0003854).
- Don't do show-connect-info on serversonly ports
- Fixed crash on Linux (with a 'new' dynamic linker) when a module has
  been updated and then reloaded. From now on we just copy to a tempfile,
  and never hardlink. (bug #???????).
- Print out an error if a user uses standard ./configure stuff instead of
  ./Config. Won't catch all cases, but will definitely catch most problems.
- Update some urls
- Added ./configure option called --with-system-tre by which you can specify
  a path to the TRE library (instead of using the TRE we ship with Unreal).
  Patch provided by ohnobinki (#0003842).